plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'pl.edu.pw.ee'
version = '0.0.1'

def jwtVer = '0.11.5'
def mapstructVer = '1.5.5.Final'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    runtimeOnly 'org.postgresql:postgresql'

    implementation "io.jsonwebtoken:jjwt-api:${jwtVer}"
    implementation "io.jsonwebtoken:jjwt-impl:${jwtVer}"
    implementation "io.jsonwebtoken:jjwt-jackson:${jwtVer}"

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation "org.mapstruct:mapstruct:${mapstructVer}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVer}"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVer}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
